--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"eslint": "^8.50.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.30",
+		"postcss": "^8.4.31",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.2.8",
@@ -51,10 +51,11 @@
 		"@sanity/ui": "^1.8.2",
 		"@sanity/vision": "^3.16.7",
 		"@types/lodash.get": "^4.4.7",
+		"@types/photoswipe": "^4.1.3",
 		"@types/slug": "^5.0.5",
 		"@vercel/analytics": "^1.0.2",
 		"lodash.get": "^4.4.2",
-		"photoswipe": "^5.4.1",
+		"photoswipe": "^5.4.2",
 		"pluralize-esm": "^9.0.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
