--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,6 @@ VITE_SANITY_DATASET="production"
 VITE_SANITY_PROJECT_TITLE="Awesome Project Title"
 VITE_SANITY_API_VERSION="2023-03-07"
 VITE_SANITY_USE_CDN=true
-VITE_SHOPIFY_DOMAIN="awesome-project.myshopify.com"
-VITE_SHOPIFY_API_VERSION="2021-04"
-VITE_SHOPIFY_STOREFRONT_API_TOKEN="111"
+# VITE_SHOPIFY_DOMAIN="awesome-project.myshopify.com"
+# VITE_SHOPIFY_API_VERSION="2021-04"
+# VITE_SHOPIFY_STOREFRONT_API_TOKEN="111"
